[package]
name = "rocket-multipart-form-data"
version = "0.9.6"
edition = "2018"
authors = ["Magic Len <len@magiclen.org>"]
repository = "https://github.com/magiclen/rocket-multipart-form-data"
homepage = "https://magiclen.org/rocket-multipart-form-data"
keywords = ["rocket", "server", "web", "multipart", "form-data"]
categories = ["parser-implementations"]
description = "This crate provides a multipart parser for the Rocket framework."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[badges.travis-ci]
repository = "magiclen/rocket-multipart-form-data"
branch = "master"

[dependencies]
rocket = { rev = "0c150c2", git = "https://github.com/SergioBenitez/Rocket.git" }
mime = "0.3.12"
multipart-async = { version = "0", git = "https://github.com/abonander/multipart-async.git", default-features = false, features = ["server"] }
tokio-util = { version = "0.2", features = ["codec"] }

[dev-dependencies]
rocket-include-static-resources = "0.9"
rocket-raw-response = "0.4"
